{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 27,
  "lineage": "b9898ddb-bfd6-f416-39c0-7139028d7727",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TeeEC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ff98ccbfa41c9ad",
            "arn": "arn:aws:ec2:us-east-1:891377318428:instance/i-03eb037bd1d74bd3f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03eb037bd1d74bd3f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0b399a1c75678a04b"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b399a1c75678a04b",
            "private_dns": "ip-10-14-2-163.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.14.2.163",
            "public_ip": "50.19.8.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0091eee360b394821",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd055fed13cf5f0e",
            "tags": {
              "Name": "Tee-EC2",
              "Terraform": "tf-tee"
            },
            "tags_all": {
              "Name": "Tee-EC2",
              "Terraform": "tf-tee"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-000c30b1de5b2de45"
            ]
          },
          "dependencies": [
            "aws_network_interface.Tee-Server-if",
            "aws_security_group.sg69",
            "aws_subnet.Tee-Public_Subnets2",
            "aws_vpc.TeeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Tee-ig-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377318428:internet-gateway/igw-042035649cdcdf22b",
            "id": "igw-042035649cdcdf22b",
            "owner_id": "891377318428",
            "tags": {
              "Name": "Tee-tf_igw"
            },
            "tags_all": {
              "Name": "Tee-tf_igw"
            },
            "vpc_id": "vpc-01b552619b4cc4463"
          },
          "dependencies": [
            "aws_vpc.TeeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "Tee-Server-if",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377318428:network-interface/eni-0b399a1c75678a04b",
            "id": "eni-0b399a1c75678a04b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:ce:47:d4:ab",
            "owner_id": "891377318428",
            "private_ip": "10.14.2.163",
            "private_ip_list": [
              "10.14.2.163"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.14.2.163"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-000c30b1de5b2de45"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd055fed13cf5f0e",
            "tags": {
              "Name": "Primary-ENI-69",
              "Terraform": "tf-tee"
            },
            "tags_all": {
              "Name": "Primary-ENI-69",
              "Terraform": "tf-tee"
            }
          },
          "dependencies": [
            "aws_security_group.sg69",
            "aws_subnet.Tee-Public_Subnets2",
            "aws_vpc.TeeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tee-public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377318428:route-table/rtb-00e2365c95df32177",
            "id": "rtb-00e2365c95df32177",
            "owner_id": "891377318428",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042035649cdcdf22b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tee_public_rtb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "tee_public_rtb",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b552619b4cc4463"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Tee-ig-tf",
            "aws_vpc.TeeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tee-rtb-ass-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2ae22bfc8a5217d",
            "route_table_id": "rtb-00e2365c95df32177",
            "subnet_id": "subnet-0cd055fed13cf5f0e"
          },
          "dependencies": [
            "aws_internet_gateway.Tee-ig-tf",
            "aws_route_table.tee-public_route_table",
            "aws_subnet.Tee-Public_Subnets2",
            "aws_vpc.TeeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg69",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377318428:security-group/sg-000c30b1de5b2de45",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-000c30b1de5b2de45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240520074629433300000001",
            "name_prefix": "terraform-",
            "owner_id": "891377318428",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b552619b4cc4463"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TeeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Tee-Private_Subnets1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377318428:subnet/subnet-04ae3a6e9122c7e3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.14.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ae3a6e9122c7e3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377318428",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tee-pri-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Tee-pri-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01b552619b4cc4463"
          },
          "dependencies": [
            "aws_vpc.TeeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Tee-Private_Subnets2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377318428:subnet/subnet-0d6bd756a46605ce0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.14.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6bd756a46605ce0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377318428",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tee-pri-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Tee-pri-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01b552619b4cc4463"
          },
          "dependencies": [
            "aws_vpc.TeeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Tee-Public-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377318428:subnet/subnet-03997340a78d6f52f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.14.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03997340a78d6f52f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377318428",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tee-pub-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Tee-pub-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01b552619b4cc4463"
          },
          "dependencies": [
            "aws_vpc.TeeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Tee-Public_Subnets2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377318428:subnet/subnet-0cd055fed13cf5f0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.14.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd055fed13cf5f0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377318428",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tee-pub-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Tee-pub-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01b552619b4cc4463"
          },
          "dependencies": [
            "aws_vpc.TeeVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TeeVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377318428:vpc/vpc-01b552619b4cc4463",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.14.0.0/16",
            "default_network_acl_id": "acl-0e8c7501634bad5cd",
            "default_route_table_id": "rtb-0aa53e21efd20f99d",
            "default_security_group_id": "sg-0bdd9b18178e77665",
            "dhcp_options_id": "dopt-0a5cff44b04636c4c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b552619b4cc4463",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa53e21efd20f99d",
            "owner_id": "891377318428",
            "tags": {
              "Name": "TeeVPC",
              "Project": "p14",
              "Terraform": "tf-tee"
            },
            "tags_all": {
              "Name": "TeeVPC",
              "Project": "p14",
              "Terraform": "tf-tee"
            }
          }
        }
      ]
    }
  ]
}